# pydin

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  core.cpp  deps.bzl  extensions.bzl  foo_test.py  old_req.txt  python_configure.bzl  repositories.bzl  requirements.in  requirements.txt  requirements_darwin.txt  requirements_lock.txt
bazel/: llvm_rules.bzl
bazel/pybind11/: build_defs.bzl
bench/: __init__.py  utils.py
benchmarks/: BUILD  __init__.2py  __init__.py  _dev.py  benchmark_gravitation-old.py  benchmark_gravitation.py  benchmark_linalg-old.py  benchmark_linalg-old2.py  benchmark_linalg.py  test_benchmark.py
environment/: BUILD  dependency_set.bzl
environment/example/: requirements.in  requirements_darwin.txt  requirements_linux.txt  requirements_lock.txt
environment/test/: BUILD  requirements_linux.txt
examples/: BUILD  advanced_triaxial_ellipsoid_tbb_example.py  dev.py  example_autodiff_stts.py  example_autodiff_stts2.py  example_autodiff_stts3.py  example_autodiff_stts4.py  mcts-old.py  mcts.py  mcts_tictactoe-njit.py  mcts_tictactoe-old.py  mcts_tictactoe.py  model_gravitation_ellipsoidal.py  odinscript.py  orbit_plot.py  requirements.in  requirements_lock.txt  requirements_windows.txt
examples/data/: BUILD  ellipsoid_mesh.ply  ellipsoid_mesh.stl
examples/environment/: requirements.in  requirements_darwin.txt  requirements_lock.txt
examples/examples_develop/: dev.py  foo_test.py
examples/examples_gravity_models/: BUILD  basic_triaxial_ellipsoid_example.py  ellipsoidal_gravity_models.py
examples/examples_gtoc12/: a_preliminary.py  gtoc_clustering.py  util.py
examples/examples_third_party/: example_trimesh.py
examples/examples_tree_search/: main.py  mcts-2.py  mcts_tictactoe.py  tictactoe.py
include/pydin/: bind_astro.hpp  bind_gravitation.hpp  bind_logging.hpp  bind_mcts-old.hpp  bind_mcts.hpp  bind_omp.hpp  bind_tbb.hpp  bind_tree.hpp  common.hpp  common_macros.hpp  docstrings.hpp  serialization.hpp
include/pydin/details/: mcts.hpp
pip/: BUILD  environment.yml
pip/requirements/tests/: requirements.in  requirements_darwin.txt
pydin/: BUILD  __init__.py  core.cpp  dev.2py  dev.py  dev4.py
pydin/include/pydin/: bind_astro.hpp  bind_autodiff.hpp  bind_gravitation.hpp  bind_jit.hpp  bind_linalg.hpp  bind_logging.hpp  bind_mcts.hpp  bind_omp.hpp  bind_shape.h  bind_tbb.hpp  bind_tree.hpp  common.hpp  common_macros.hpp  serialization.hpp
pydin/include/pydin/details/: mcts.hpp
pydin/plotting/: __init__.py  __mayavi.py
pydin/plotting/benchmark/: _matplotlib.py
pydin/plotting/camera/: _matplotlib.py  _mayavi.py
pydin/plotting/gravity/: __init__.py  _matplotlib.py  _mayavi.py
pydin/plotting/gravity/examples/: polyhedral.py
script/: BUILD  bind_odinscript.hpp  odin.cpp
src/: core.cpp
tests/: BUILD  test_astrodynamics.py  test_geometry.py  test_gravitation.py  test_linalg.py  test_mcts-old.py  test_mcts.py  test_plotting.py  test_shape.py  test_tbb.py  test_tree.py
tests/data/: Eros.face  Eros.node
tools/: pip_requirements.sh  stub_generator.py
